<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dk.itsmap.e15.grp4.CalenderActivity.CalenderActivity">
    <item
        android:id="@+id/action_menu"
        android:orderInCategory="100"
        android:title=""
        android:icon="@mipmap/menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_home"
                android:icon="@mipmap/home"
                android:title="@string/home"/>
            <item
                android:id="@+id/menu_artist"
                android:icon="@mipmap/artist"
                android:title="@string/artist"/>
            <item
                android:id="@+id/menu_map"
                android:icon="@mipmap/map"
                android:title="@string/map"/>
            <item
                android:id="@+id/menu_calender"
                android:icon="@mipmap/calender"
                android:title="@string/calender"/>
            <item
                android:id="@+id/menu_info"
                android:icon="@mipmap/info"
                android:title="@string/info"/>
        </menu>
    </item>
</menu>
