<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.victor.teamproject.InfoActivity">
    <item
        android:id="@+id/action_menu"
        android:orderInCategory="100"
        android:title=""
        android:icon="@mipmap/menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_home"
                android:icon="@mipmap/home"
                android:title="@string/home"
                android:onClick="btnHome"/>
            <item
                android:id="@+id/menu_artist"
                android:icon="@mipmap/artist"
                android:title="@string/artist"
                android:onClick="btnArtist"/>
            <item
                android:id="@+id/menu_map"
                android:icon="@mipmap/map"
                android:title="@string/map"
                android:onClick="btnMap"/>
            <item
                android:id="@+id/menu_calender"
                android:icon="@mipmap/calender"
                android:title="@string/calender"
                android:onClick="btnCalender"/>
            <item
                android:id="@+id/menu_info"
                android:icon="@mipmap/info"
                android:title="@string/info"
                android:onClick="btnInfo"/>
        </menu>
    </item>
</menu>
